server_setup/terraform_aws_instance_provision/terraform_resource_security_group.tf
resource "aws_security_group" "cd_instance_security_group" {
  name = "cd_instance_security_group"
  description = "CD Instance Security Group"
  ingress {
    protocol = "tcp"
    from_port = 22
    to_port = 22
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  ingress {
    protocol = "tcp"
    from_port = 80
    to_port = 80
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = [
      "0.0.0.0/0"]
  }
  tags = {
    Name = "CD Instance Security Group"
  }
}
